--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -7,5 +7,12 @@
 }
 
 .content {
-  width: 960px;
+  width: 80vw;
+}
+
+@media only screen and (max-width: 960px) {
+  .content {
+    width: 95vw;
+    padding: 0 20px;
+  }
 }
