--- a/styles/NavBar.module.scss
+++ b/styles/NavBar.module.scss
@@ -6,6 +6,7 @@
   height: 100px;
   justify-content: space-between;
   margin-bottom: 6rem;
+  width: 80vw;
 }
 
 .linksContainer {
@@ -58,5 +59,26 @@
     box-shadow: 9px 10px 11px -2px rgba(30, 150, 252, 0.36);
     -webkit-box-shadow: 9px 10px 11px -2px rgba(30, 150, 252, 0.36);
     -moz-box-shadow: 9px 10px 11px -2px rgba(30, 150, 252, 0.36);
+  }
+}
+
+@media only screen and (max-width: 960px) {
+  .container {
+    margin-bottom: 3rem;
+    width: 95vw;
+  }
+  .linksText {
+    font-size: 1.2rem;
+    margin-right: 20px;
+  }
+  .linksButton {
+    padding: 12px;
+    margin-right: 0;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .container {
+    margin-bottom: 0rem;
   }
 }
